--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 	<title>Ski Resort - Survey Form</title>
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="./css/loading.css">
 
 	<style type="text/css">
-		iframe {
+		#doc-wrapper {
 			position: absolute;
 			top: 0;
 			left: 0;
 			border: 0;
-			background: white;
+			background: rgb(249, 249, 250);
 			width: 100%;
 			height: 100%;
 			display: block;
@@ -19,6 +20,20 @@
 	</style>
 </head>
 <body>
-	 <iframe src="./app.html"></iframe> 
+	<div id="loading">
+		<div class="page-loading__icon"></div>
+	</div>
+
+	<script type="text/javascript">
+		var loading = document.querySelector('#loading');
+
+		window.addEventListener('message', function(event) {
+			if (event.data === 'hideLoad') {
+				loading.style.display = 'none';
+			}
+		}, false);
+	</script>
+
+	<iframe id="doc-wrapper" src="./app.html"></iframe>
 </body>
 </html>
