Improved accessibility by outlining radio, checkbox, and select elements when focused using TAB.

--- a/app.html
+++ b/app.html
@@ -116,6 +116,7 @@
 	</div>
 
 	<script src="./app.js"></script>
+	<script src="./highlightTabFocus.js"></script>
 	<!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 </body>
 </html>
