--- a/app.html
+++ b/app.html
@@ -26,6 +26,10 @@
 	</style>
 </head>
 <body space-top-bot="50px">
+	<div id="loading" class="flex-center-col">
+		<div class="page-loading__icon"></div>
+	</div>
+	
 	<div class="frosted-panel" panel-dimensions="90% auto" breakpoint-type="min-width" breakpoints="900px 750px auto">
 		<svg>
 			<filter id="blurMe" filterRes="1200" color-interpolation-filters="sRGB">
